jenkins/jenkins-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins
  namespace: jenkins
spec:
  hosts:
  - "jenkins.{.INGRESS_NODE_IP}.nip.io"
  gateways:
  - ingressgateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        regex: /.*
    route:
    - destination:
        host: example-jenkins
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jenkins
  namespace: jenkins
spec:
  host: example-jenkins
